--- a/files/en-us/web/progressive_web_apps/app_structure/index.html
+++ b/files/en-us/web/progressive_web_apps/app_structure/index.html
@@ -13,7 +13,7 @@ tags:
 ---
 <div>{{PreviousMenuNext("Web/Progressive_web_apps/Introduction", "Web/Progressive_web_apps/Offline_Service_workers", "Web/Progressive_web_apps")}}</div>
 
-<p class="summary">Now that we know the theory behind PWAs, let's look at the recommended structure of an actual app. We will start with analyzing the <a href="https://mdn.github.io/pwa-examples/js13kpwa/">js13kPWA</a> application, why it is built that way, and what benefits it brings.</p>
+<p>Now that we know the theory behind PWAs, let's look at the recommended structure of an actual app. We will start with analyzing the <a href="https://mdn.github.io/pwa-examples/js13kpwa/">js13kPWA</a> application, why it is built that way, and what benefits it brings.</p>
 
 <h2 id="Architecture_of_an_app">Architecture of an app</h2>
 
@@ -68,7 +68,7 @@ tags:
 
 <p>The <a href="https://mdn.github.io/pwa-examples/js13kpwa/">js13kPWA</a> website structure is quite simple: it consists of a single HTML file (<a href="https://github.com/mdn/pwa-examples/blob/master/js13kpwa/index.html">index.html</a>) with basic CSS styling (<a href="https://github.com/mdn/pwa-examples/blob/master/js13kpwa/style.css">style.css</a>), and a few images, scripts, and fonts. The folder structure looks like this:</p>
 
-<p><img alt="Folder structure of js13kPWA." src="js13kpwa-directory.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Folder structure of js13kPWA." src="js13kpwa-directory.png"></p>
 
 <h3 id="The_HTML">The HTML</h3>
 
