--- a/files/en-us/web/progressive_web_apps/re-engageable_notifications_push/index.html
+++ b/files/en-us/web/progressive_web_apps/re-engageable_notifications_push/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{PreviousMenuNext("Web/Apps/Progressive/Installable_PWAs", "Web/Apps/Progressive/Loading", "Web/Apps/Progressive")}}</div>
 
-<p class="summary">Having the ability to cache the contents of an app to work offline is a great feature. Allowing the user to install the web app on their home screen is even better. But instead of relying only on user actions, we can do more, using push messages and notifications to automatically re-engage and deliver new content whenever it is available.</p>
+<p>Having the ability to cache the contents of an app to work offline is a great feature. Allowing the user to install the web app on their home screen is even better. But instead of relying only on user actions, we can do more, using push messages and notifications to automatically re-engage and deliver new content whenever it is available.</p>
 
 <h2 id="Two_APIs_one_goal">Two APIs, one goal</h2>
 
@@ -38,7 +38,7 @@ button.addEventListener('click', () =&gt; {
 
 <p>This shows a popup using the operating system’s own notifications service:</p>
 
-<p><img alt="Notification of js13kPWA." src="js13kpwa-notification.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Notification of js13kPWA." src="js13kpwa-notification.png"></p>
 
 <p>When the user confirms to receive notifications, the app can then show them. The result of the user action can be default, granted or denied. The default option is chosen when the user won't make a choice, and the other two are set when the user clicks yes or no respectively.</p>
 
