--- a/files/en-us/web/progressive_web_apps/responsive/graphics_for_responsive_sites/index.html
+++ b/files/en-us/web/progressive_web_apps/responsive/graphics_for_responsive_sites/index.html
@@ -49,6 +49,8 @@ tags:
  <dt>SVG</dt>
  <dd><a href="/en-US/docs/Web/SVG">SVG</a>, just like <a href="/en-US/docs/Web/HTML">HTML</a>/<a href="/en-US/docs/Web/CSS/CSS3">CSS</a>, can be manipulated via JavaScript. So adding interactivity is not difficult. You can also add links direcly into SVG and can create animations using <a href="/en-US/docs/Web/SVG/SVG_animation_with_SMIL">SMIL</a> (Synchronized Multimedia Intergration Language).</dd>
  <dt>WebGL/Canvas</dt>
- <dd>You can create a canvas to draw interactive graphics on using the HTML &lt;canvas&gt; element, then use the Canvas API to create shapes, lines, import image files, create text, do compositing operations, and much more. Standard JavaScript can then be used to animate the image output, etc. You can create 2D imagery using the regular 2D canvas context, or 3D imagery using the more nascent <a href="/en-US/docs/Web/API/WebGL_API">WebGL API</a>.</dd>
- <dd>Canvas is very powerful, but it needs to be used with caution. It is good for the visuals of games and complex data visualisions, but for standard user interface elements it is not very efficient. In addition, Canvases are just raster images, so the text created inside them is not accessible, plus they don't scale well.</dd>
+ <dd>
+   <p>You can create a canvas to draw interactive graphics on using the HTML &lt;canvas&gt; element, then use the Canvas API to create shapes, lines, import image files, create text, do compositing operations, and much more. Standard JavaScript can then be used to animate the image output, etc. You can create 2D imagery using the regular 2D canvas context, or 3D imagery using the more nascent <a href="/en-US/docs/Web/API/WebGL_API">WebGL API</a>.</p>
+   <p>Canvas is very powerful, but it needs to be used with caution. It is good for the visuals of games and complex data visualisions, but for standard user interface elements it is not very efficient. In addition, Canvases are just raster images, so the text created inside them is not accessible, plus they don't scale well.</p>
+ </dd>
 </dl>
