--- a/files/en-us/web/progressive_web_apps/installable_pwas/index.html
+++ b/files/en-us/web/progressive_web_apps/installable_pwas/index.html
@@ -12,7 +12,7 @@ tags:
 ---
 <div>{{PreviousMenuNext("Web/Apps/Progressive/Offline_Service_workers", "Web/Apps/Progressive/Re-engageable_Notifications_Push", "Web/Apps/Progressive")}}</div>
 
-<p class="summary">In the last article, we read about how the example application, <a href="https://mdn.github.io/pwa-examples/js13kpwa/">js13kPWA</a>, works offline thanks to its <a href="/en-US/docs/Web/API/Service_Worker_API">service worker</a>, but we can go even further and allow users to install the web app on mobile and desktop browsers that support doing so. The installed web app can then be launched by users just as if it were any native app. This article explains how to achieve this using the web app's manifest.</p>
+<p>In the last article, we read about how the example application, <a href="https://mdn.github.io/pwa-examples/js13kpwa/">js13kPWA</a>, works offline thanks to its <a href="/en-US/docs/Web/API/Service_Worker_API">service worker</a>, but we can go even further and allow users to install the web app on mobile and desktop browsers that support doing so. The installed web app can then be launched by users just as if it were any native app. This article explains how to achieve this using the web app's manifest.</p>
 
 <p>These technologies allow the app to be launched directly from the device's home screen, rather than the user having to open the browser and then navigate to the site by using a bookmark or typing the URL. Your web app can sit next to native applications as first class citizens. This makes the web app easier to access; additionally, you can specify that the app be launched in fullscreen or standalone mode, thus removing the default browser user interface that would otherwise be present, creating an even more seamless and native-like feel.</p>
 
@@ -28,7 +28,7 @@ tags:
 </ul>
 
 <div class="notecard note">
-<p>Currently, only the Chromium-based browsers such as Chrome, Edge, and Samsung Internet require the service worker. If developing your app using Firefox, be aware that you will need a service worker to be compatible with Chromium-based browsers.</p>
+<p><strong>Note:</strong> Currently, only the Chromium-based browsers such as Chrome, Edge, and Samsung Internet require the service worker. If developing your app using Firefox, be aware that you will need a service worker to be compatible with Chromium-based browsers.</p>
 </div>
 
 <h3 id="The_manifest_file">The manifest file</h3>
@@ -42,7 +42,7 @@ tags:
 <pre class="brush: html">&lt;link rel="manifest" href="js13kpwa.webmanifest"&gt;</pre>
 
 <div class="note">
-<p>There are a few common kinds of manifest file that have been used in the past: <code>manifest.webapp</code> was popular in Firefox OS app manifests, and many use <code>manifest.json</code> for web manifests as the contents are organized in a JSON structure. However, the <code>.webmanifest</code> file format is explicitly mentioned in the <a href="https://w3c.github.io/manifest/">W3C manifest specification</a>, so that's what we'll use here.</p>
+<p><strong>Note:</strong> There are a few common kinds of manifest file that have been used in the past: <code>manifest.webapp</code> was popular in Firefox OS app manifests, and many use <code>manifest.json</code> for web manifests as the contents are organized in a JSON structure. However, the <code>.webmanifest</code> file format is explicitly mentioned in the <a href="https://w3c.github.io/manifest/">W3C manifest specification</a>, so that's what we'll use here.</p>
 </div>
 
 <p>The content of the file looks like this:</p>
@@ -92,19 +92,19 @@ tags:
 
 <p>When the user visits the PWA with a supporting mobile browser, it should display a notification (such as a banner or dialog box) indicating that it's possible to install the app as a PWA.</p>
 
-<p><img alt="Add to Home screen popup of js13kPWA." src="js13kpwa-icon.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Add to Home screen popup of js13kPWA." src="js13kpwa-icon.png"></p>
 
 <p>After the user indicates they wish to proceed with installation, the install banner is shown. That banner is automatically created by the browser, based on the information from the manifest file. For instance, the prompt includes the app's name and icon.</p>
 
-<p><img alt="Install banner of js13kPWA." src="js13kpwa-banner.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Install banner of js13kPWA." src="js13kpwa-banner.png"></p>
 
 <p>If the user clicks the button, there is a final step showing what the app will look like, and letting the user choose if they definitely want to add the app.</p>
 
-<p><img alt="Add to Home screen popup of js13kPWA." src="js13kpwa-add.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Add to Home screen popup of js13kPWA." src="js13kpwa-add.png"></p>
 
 <p>When confirmed, the app will be installed on the home screen.</p>
 
-<p><img alt="" src="js13kpwa-installed.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="js13kpwa-installed.png"></p>
 
 <p>Now the user can launch and use the web app just like any other application on their device. Depending on the device and operating system, the web app's icon may be badged with a small icon that indicates that it's a web app. In the screen shot above, for example, the app has a tiny Firefox icon, indicating that it's a web app that uses the Firefox runtime.</p>
 
@@ -112,7 +112,7 @@ tags:
 
 <p>In some browsers, a splash screen is also generated from the information in the manifest, which is shown when the PWA is launched and while it's being loaded started up.</p>
 
-<p><img alt="" src="js13kpwa-splash.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="js13kpwa-splash.png"></p>
 
 <p>The icon and the theme and background colors are used to create this screen.</p>
 
