--- a/files/en-us/web/progressive_web_apps/installing/index.html
+++ b/files/en-us/web/progressive_web_apps/installing/index.html
@@ -21,7 +21,7 @@ tags:
 ---
 <p>{{draft}}</p>
 
-<p><span class="seoSummary">Web application installation is a feature available in modern browsers that allows users to choose to easily and conveniently “install” a web application on their device so they can access it in the same way they would any other installed app.</span> Depending on the device and features of the operating system and browser, this can result in what is essentially a fully featured application (for example, using <a href="https://developers.google.com/web/fundamentals/integration/webapks">WebAPK</a> on Android) or as a shortcut added to their device’s screen. This guide explains how installation is performed, what it means, and what you need to do as a developer to let your users take advantage of it.</p>
+<p>Web application installation is a feature available in modern browsers that allows users to choose to easily and conveniently “install” a web application on their device so they can access it in the same way they would any other installed app. Depending on the device and features of the operating system and browser, this can result in what is essentially a fully featured application (for example, using <a href="https://developers.google.com/web/fundamentals/integration/webapks">WebAPK</a> on Android) or as a shortcut added to their device’s screen. This guide explains how installation is performed, what it means, and what you need to do as a developer to let your users take advantage of it.</p>
 
 <h2 id="Why_installation">Why installation?</h2>
 
@@ -45,7 +45,7 @@ tags:
 
 <p>On an Android device using Firefox,  you'll see a "home" icon with a plus (+) icon inside it—this is the "Add to Home screen" icon displayed for any site that has the necessary features in place.</p>
 
-<p><strong id="docs-internal-guid-7d1a3d87-7fff-4a7b-6728-ae4999c46dd4"><img alt="A screenshot of a web browser displaying the Add to Home Screen icon at the top" src="android-a2hs-icon.png"></strong></p>
+<p><img alt="A screenshot of a web browser displaying the Add to Home Screen icon at the top" src="android-a2hs-icon.png"></p>
 
 <p>Tapping this will show a confirmation banner—pressing the banner's big "+ ADD TO HOME SCREEN" button completes the action, adding the app to the Home screen. Note that in Android 8 and higher, a system-level "Add to Home screen" permission dialog will be shown first.</p>
 
@@ -66,14 +66,14 @@ tags:
 <p><img alt="Screenshot of a Chrome banner requesting permission to install the Foxes sample app" src="chrome-a2hs-banner.png"></p>
 
 <div class="notecard note">
-<p>Note: You can find out a lot more about Chrome install banners from the article<a href="https://developers.google.com/web/fundamentals/app-install-banners/"> Web App Install Banners</a>.</p>
+<p><strong>Note:</strong> You can find out a lot more about Chrome install banners from the article<a href="https://developers.google.com/web/fundamentals/app-install-banners/"> Web App Install Banners</a>.</p>
 </div>
 
 <p>If you choose not to add it to your Home screen at this point, you can do so later using the "Add to Home Screen" icon in the main Chrome menu.</p>
 
 <h3 id="Safari_for_iOS_iPhoneOS_iPadOS">Safari for iOS / iPhoneOS / iPadOS</h3>
 
-<p>On Apple's iOS (including iPhoneOS and iPadOS), the Safari browser built into the device has some support for web applications, including support for the add to home screen feature. To add a web app to the home screen (also known as the launcher or springboard), tap the sharing button (<img alt="Square and arrow sharing icon from iOS and macOS" src="square.svg" style="display:inline">) at the bottom of the screen:</p>
+<p>On Apple's iOS (including iPhoneOS and iPadOS), the Safari browser built into the device has some support for web applications, including support for the add to home screen feature. To add a web app to the home screen (also known as the launcher or springboard), tap the sharing button at the bottom of the screen:</p>
 
 <p><img alt="Screenshot showing the location of the Share button in Safari on iOS 13" src="safari-ios-a2hs-icon.png"></p>
 
