--- a/files/en-us/web/progressive_web_apps/responsive/responsive_design_building_blocks/index.html
+++ b/files/en-us/web/progressive_web_apps/responsive/responsive_design_building_blocks/index.html
@@ -8,9 +8,7 @@ tags:
   - Mobile
   - Responsive Design
 ---
-<div class="summary">
 <p>In this article we will discuss the main essential components of responsive design, with some links to further information where necessary.</p>
-</div>
 
 <p>For Web developers, it is now fairly common to be called upon to create a Web site or app that changes its user interface depending on the browser or device accessing the site to provide an optimized experience. One approach to this is to create different versions of your site/app for different platforms or browsers and serve them appropriately after detecting which browser or platform is looking at your site. But this is increasingly inefficient: browser sniffing is inherently error prone, and maintaining multiple copies of your code can turn out to be a nightmare.</p>
 
@@ -21,7 +19,7 @@ tags:
 <p>There are disadvantages to this approach as well. If the content, layout, and functionality need to change greatly for different devices, it may not be such a good approach. Also, taking an existing site and adding responsiveness to it, to make it mobile/tablet friendly, can be a lot more effort than just creating a separate mobile site or app, especially if it is a sprawling enterprise site. Read more about <a href="/en-US/docs/Web/Progressive_web_apps">responsive design advantages and disadvantages</a>.</p>
 
 <div class="note">
-<p>You can also read our discussion on the basics of <a href="/en-US/docs/Web/Progressive_web_apps">responsive design</a>, if you need some more background information and basics.</p>
+<p><strong>Note:</strong> You can also read our discussion on the basics of <a href="/en-US/docs/Web/Progressive_web_apps">responsive design</a>, if you need some more background information and basics.</p>
 </div>
 
 <h2 id="Fluid_grids">Fluid grids</h2>
@@ -36,9 +34,9 @@ tags:
 
 <p>Our desktop layout for Snapshot is three columns, containing the camera viewer, image capture view, and gallery, respectively.</p>
 
-<p><img alt="" src="desktop-layout.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="desktop-layout.png"></p>
 
-<p>The markup is very simple:</p>
+<p>The markup is as follows:</p>
 
 <pre class="brush: html">&lt;x-deck selected-index="0"&gt;
   &lt;x-card&gt;
@@ -94,7 +92,7 @@ x-card:nth-child(3) {
 
 <p>Things are working fairly well now, but there are still some issues just waiting to present themselves. For a start, let's have a look at what happens when we include the {{HTMLElement("video")}} and {{HTMLElement("img")}} elements inside our first two columns, naked and unstyled.</p>
 
-<p><img alt="" src="broken-images.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="broken-images.png"></p>
 
 <p>Because the size of replaced elements is dictated by the size of the media inserted into them, and the media is a fixed size, they explode out of their containing elements and make a mess of the layout. This is pretty horrible, but generally this kind of problem is easily fixed with some simple CSS:</p>
 
@@ -111,7 +109,7 @@ x-card:nth-child(3) {
 
 <p>This is because in our case, we do in fact want the video and image to stretch to always fill their containers no matter what — a subtle but important difference from {{cssxref("max-width")}} — and therefore always be the same size. The video always resizes dynamically, but the screen captures taken from it do not, so upon resizing the screen it was possible to end up with a messy layout with different sized elements when using <code>max-width: 100%</code>, such as:</p>
 
-<p><img alt="" src="broken-max-width-layout.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="broken-max-width-layout.png"></p>
 
 <h2 id="Media_queries">Media queries</h2>
 
@@ -125,7 +123,7 @@ x-card:nth-child(3) {
 
 <p>In our example, we have a desktop layout, as we've already seen. This is created using the CSS rules included at the top of the stylesheet, before any media queries are encountered.<br>
  <br>
- <img alt="" src="desktop-layout.png" style="display: block; margin: 0px auto;"></p>
+ <img alt="" src="desktop-layout.png"></p>
 
 <h3 id="Mid-width_layout">Mid-width layout</h3>
 
@@ -148,7 +146,7 @@ x-card:nth-child(3) {
 
 <p>So here we're altering the widths of the columns and removing the float of the third column (and adding clearing to guard against any float funny business). We've also altered the width of the images inside the third container (no longer a column — this is the gallery) so that now you get five per line (it was previously three per line).</p>
 
-<p><img alt="" src="middle-layout.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="middle-layout.png"></p>
 
 <h3 id="Narrow_screenmobile_layout">Narrow screen/mobile layout</h3>
 
@@ -237,7 +235,7 @@ x-card:nth-child(3) {
 
 <p>Last, we have used <code>flex: 1;</code> to make the buttons always take up the same proportion of space on the line. Let's have a look at the mobile layout, in the below image.</p>
 
-<p><img alt="single column layout for mobile app view, with three buttons to navigate between cards, an image viewer, and a Save Picture button at the button." src="mobile-layout.png" style="float: left; margin-right: 2rem;">But there are more tricks up our sleeves for this mobile app layout! As mentioned above, we used <a href="https://mozilla.github.io/brick/">Mozilla Brick</a>, a collection of ready-rolled mobile UI components, in the making of the mobile app layout. In particular, we used the <a href="https://mozilla.github.io/brick/docs.html#deck">deck</a> component for the nice transition effect between cards when the buttons are pressed. For more on using Brick, read <a href="/en-US/docs/Web/Apps/app_layout/Mozilla_Brick_ready_made_UI_components">Mozilla Brick: ready made UI components</a>.</p>
+<p><img alt="single column layout for mobile app view, with three buttons to navigate between cards, an image viewer, and a Save Picture button at the button." src="mobile-layout.png">But there are more tricks up our sleeves for this mobile app layout! As mentioned above, we used <a href="https://mozilla.github.io/brick/">Mozilla Brick</a>, a collection of ready-rolled mobile UI components, in the making of the mobile app layout. In particular, we used the <a href="https://mozilla.github.io/brick/docs.html#deck">deck</a> component for the nice transition effect between cards when the buttons are pressed. For more on using Brick, read <a href="/en-US/docs/Web/Apps/app_layout/Mozilla_Brick_ready_made_UI_components">Mozilla Brick: ready made UI components</a>.</p>
 
 <p>What's more relevant to this article is that we didn't want the Brick CSS and JavaScript files being applied to the markup unless we were looking at the mobile app view. To achieve this, we applied the Brick CSS to the page using a separate {{HTMLElement("link")}} element with a <code>media</code> attribute:</p>
 
@@ -310,10 +308,10 @@ x-card:nth-child(3) {
 
 <p>This results in the following layout:</p>
 
-<p><img alt="" src="viewport-fail-fixed.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="viewport-fail-fixed.png"></p>
 
 <div class="note">
-<p><strong>Note</strong>: Another solution with respect to orientation might be to just lock the orientation of your app, to portrait or landscape. If you are working on an installed app, you can easily do this with the <a href="/en-US/docs/Web/Apps/Build/Manifest#orientation">orientation manifest field</a>. If you want a solution that works across general web apps, you could use the <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation#locking_the_screen_orientation">Screen orientation API</a>, and/or provide a message asking the user to rotate their screen if they are using the wrong orientation (for example, if <code>window.innerWidth</code> is larger than <code>window.innerHeight</code>, assume the<br>
+<p><strong>Note:</strong> Another solution with respect to orientation might be to just lock the orientation of your app, to portrait or landscape. If you are working on an installed app, you can easily do this with the <a href="/en-US/docs/Web/Apps/Build/Manifest#orientation">orientation manifest field</a>. If you want a solution that works across general web apps, you could use the <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation#locking_the_screen_orientation">Screen orientation API</a>, and/or provide a message asking the user to rotate their screen if they are using the wrong orientation (for example, if <code>window.innerWidth</code> is larger than <code>window.innerHeight</code>, assume the<br>
  game is landscape mode and show a "please rotate" message.)</p>
 </div>
 
@@ -321,7 +319,7 @@ x-card:nth-child(3) {
 
 <p>One last problem to mention for our example app is concerned with mobile browsers and media queries. If we viewed my example in a mobile browser in its current state, we wouldn't see our nice mobile layout. Instead, we'd see the below image.</p>
 
-<p><img alt="" src="viewport-fail.png" style="float: left; margin-right: 2rem;">I'm sure you'll agree that this really isn't what we wanted — why is this happening? In short, mobile browsers lie. They don't render web pages at their true viewport width. Instead, they render pages at a higher assumed viewport width (something approaching a laptop screen), and then shrink the result down to fit inside the mobile screen. This is a sensible defensive mechanism — most old school sites that don't have media queries would look terrible when rendered at say, 320px or 480px wide. But this doesn't help us responsible web developers, who have written small screen layouts into our CSS using media queries and want mobile devices to display those!</p>
+<p><img alt="" src="viewport-fail.png">I'm sure you'll agree that this really isn't what we wanted — why is this happening? In short, mobile browsers lie. They don't render web pages at their true viewport width. Instead, they render pages at a higher assumed viewport width (something approaching a laptop screen), and then shrink the result down to fit inside the mobile screen. This is a sensible defensive mechanism — most old school sites that don't have media queries would look terrible when rendered at say, 320px or 480px wide. But this doesn't help us responsible web developers, who have written small screen layouts into our CSS using media queries and want mobile devices to display those!</p>
 
 <p>There is a way to override this mobile rendering behavior — viewport, which is inserted into our HTML pages in the form of a {{HTMLElement("meta")}} tag. In my example, let's add the following into our HTML {{HTMLElement("head")}}:</p>
 
@@ -333,7 +331,7 @@ x-card:nth-child(3) {
 <p><strong>Note:</strong> There is a spec called <a href="http://dev.w3.org/csswg/css-device-adapt/">device adaptation</a>, which defines the same functionality but in CSS, using a <code>@viewport</code> at-rule. This is probably a more logical place to put such information, but the spec is not as well supported as the viewport meta tag, therefore you should stick with that for now.</p>
 </div>
 
-<h2 class="cleared" id="Responsive_imagesvideo">Responsive images/video</h2>
+<h2 id="Responsive_imagesvideo">Responsive images/video</h2>
 
 <p>Another problem that comes up more and more these days is making image/video weight (size in KB) responsive as well as the dimensions of the image on screen. Yes, you want the images to be contained inside the app UI whether you are using it on desktop or mobile, but you should also consider that mobile apps have much smaller viewport dimensions available than desktop apps, so you should try to give mobile devices a smaller image to download. Mobiles in general (more commonly in some parts of the world than others) are on lower bandwidth connections and have less memory available than desktop devices, so yes, those extra kilobytes really do count.</p>
 
